delete record code fixed

--- a/src/app/userlist/userlist.component.html
+++ b/src/app/userlist/userlist.component.html
@@ -152,9 +152,9 @@
                 <button mat-menu-item (click)="editUser(element.email)">
                   Edit
                 </button>
-                <button mat-menu-item (click)="deleteUserSingle(element.email)">
+                <!-- <button mat-menu-item (click)="deleteUserSingle(element.email)">
                   Delete
-                </button>
+                </button> -->
               </mat-menu>
             </div>
           </td>
